--- a/dm-sc2-baseline/Dockerfile
+++ b/dm-sc2-baseline/Dockerfile
@@ -5,4 +5,4 @@ RUN apt-get -y install r-base
 RUN apt-get -y install aptitude libcurl4-openssl-dev  libxml2-dev libxml2-dev
 
 COPY age_baseline_sc2.R /age_baseline_sc2.R
-COPY infer_sc2.sh /infer_sc2.sh
+COPY sc2_infer.sh /sc2_infer.sh
